fixed z-index media on search page

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -304,6 +304,13 @@
     }
   }
 
+  .searchView & {
+
+    @include media-breakpoint-up($desktop-breakpoint) {
+      z-index: 1;
+    }
+  }
+
   video,
   img {
 
